--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,13 +8,18 @@
 </ion-header>
 
 <ion-content>
+
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Bem vindo ao Book Store App</ion-card-title>
-      <ion-card-subtitle>Gerencie sua biblioteca o melhor app do mercado!</ion-card-subtitle>
+      <ion-card-title>
+        Bem-vindo ao Book Store App!
+      </ion-card-title>
+      <ion-card-subtitle>
+        Gerencie sua biblioteca utilizando o melhor app do mercado!
+      </ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      Cadastre o seus livros e autores e os tenha sempre em mão!
+      Cadastre os seus livros e autores e os tenha sempre em mão!
     </ion-card-content>
   </ion-card>
 
@@ -40,5 +45,4 @@
       </ion-card>
     </ion-col>
   </ion-row>
-
 </ion-content>
